--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,23 +48,24 @@ ext {
     hilt        = '2.37'
     retrofit    = '2.9.0'
     interceptor = '4.9.1'
-    paging      = '3.0.0'
+    paging      = '3.0.1'
     glide       = '4.12.0'
     gson        = '2.8.7'
+    room        = '2.3.0'
 }
 
 dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.5.0'
-    implementation 'androidx.appcompat:appcompat:1.3.0'
-    implementation 'com.google.android.material:material:1.3.0'
+    implementation 'androidx.core:core-ktx:1.6.0'
+    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.13.2'
     testImplementation "androidx.arch.core:core-testing:2.1.0"
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test:core-ktx:1.3.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test:core-ktx:1.4.0'
 
     testImplementation "org.mockito:mockito-core:$mockito"
     testImplementation"org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines"
@@ -90,6 +91,10 @@ dependencies {
     kapt "com.github.bumptech.glide:compiler:$glide"
     implementation "com.github.bumptech.glide:okhttp3-integration:$glide"
 
-
     implementation "com.google.code.gson:gson:$gson"
+
+    implementation "androidx.room:room-runtime:$room"
+    implementation "androidx.room:room-ktx:$room"
+    kapt "androidx.room:room-compiler:$room"
+
 }
